<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="realmeparts">RealmeParts</string>
    <string name="realmeparts_summary">Additional Device Settings</string>

    <string name="vibrator_intensity_control">Vibration</string>
    <string name="system_strength_title">System</string>

    <string name="otg_title">USB OTG</string>
    <string name="otg_mode_title">Enable USB-OTG</string>
    <string name="tile_otg_mode">Enable USB-OTG</string>

    <string name="display_category">Display</string>
    <string name="hbm_title">High Brightness Mode</string>
    <string name="hbm_summary">Increase maximum brightness for outdoor visibility</string>
    <string name="dc_dimming_title">DC Dimming</string>
    <string name="dc_dimming_summary">Reduce PWM flicker at low brightness levels</string>

    <string name="charging_title">Charging</string>
    <string name="stop_charging_title">Stop Charging</string>
    <string name="stop_charging_summary">Disable battery charging to keep the device powered by the charger only</string>
    <string name="charge_limit_title">Charge Limit</string>
    <string name="charge_limit_summary">Set the maximum battery charge level to prolong battery lifespan</string>

    <string-array name="charge_limit_entries">
        <item>Disabled</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>80%</item>
        <item>90%</item>
    </string-array>
    <string-array name="charge_limit_values">
        <item>100</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
    </string-array>

    <string name="audio_title">Audio</string>
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 60-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.\n\nWARNING: Ensure that any headphones are unplugged.</string>

    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">Default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong press to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>
</resources>
