<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/realmeparts">

    <PreferenceCategory
        android:title="@string/audio_title">
      <Preference
                android:key="clear_speaker"
                android:title="@string/clear_speaker_title"
                android:icon="@drawable/ic_speaker_cleaner_icon"
                android:summary="@string/clear_speaker_summary">
                <intent
                    android:action="android.intent.action.MAIN"
                    android:targetClass="com.realmeparts.settings.speaker.ClearSpeakerActivity"
                    android:targetPackage="com.realmeparts.settings" />
         </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/vibrator_intensity_control">

        <com.realmeparts.settings.vibration.VibratorStrengthPreference
            android:defaultValue="5"
            android:key="vib_strength"
            android:icon="@drawable/ic_vibrate"
            android:title="@string/system_strength_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/otg_title">

        <SwitchPreferenceCompat
            android:key="otg"
            android:defaultValue="false"
            android:icon="@drawable/ic_otg_tile"
            android:title="@string/otg_mode_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/display_category">

        <SwitchPreferenceCompat
            android:key="hbm"
            android:defaultValue="false"
            android:title="@string/hbm_title"
            android:summary="@string/hbm_summary" />

        <SwitchPreferenceCompat
            android:key="dc_dimming"
            android:defaultValue="false"
            android:title="@string/dc_dimming_title"
            android:summary="@string/dc_dimming_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/charging_title">

        <SwitchPreferenceCompat
            android:key="stop_charging"
            android:defaultValue="false"
            android:title="@string/stop_charging_title"
            android:summary="@string/stop_charging_summary" />
    </PreferenceCategory>
</PreferenceScreen>
